# dek

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  requirements-3.8.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements-dev.txt
.devcontainer/library-scripts/: common-debian.sh
dek/conf/pydantic/: deserializer.py  loader.py
dek/io/: __init__.py
dek/io/storage/: __init__.py  hive.py
dek/models/: __init__.py  context.py  generics.py
dek/spark/: config.py  transformation.py
dek/tests/: conftest.py  test_spark_transformation.py
dek/utils/: log.py
docker/glue-base-2.0/: Dockerfile  Makefile  requirements.txt
src/dek/: hadoop.py  hive.py  repository.py
src/dek/beam/: example.py
src/dek/conf/: __init__.py
src/dek/conf/pydantic/: deserializer.py  loader.py
src/dek/dek/models/: pipeline.py  sql.py
src/dek/dek/spark/: core.py  udf.py
src/dek/dek/utils/: render.py
src/dek/effect/: io.py  lazy_processor.py  processor.py
src/dek/fs/: file.py
src/dek/models/: __init__.py  context.py  generics.py  meta.py  path.py  pipeline.py  sql.py  table.py
src/dek/monad/: __init__.py  base.py  either.py  try_.py
src/dek/path/: paths.py
src/dek/spark/: __init__.py  config.py  core.py  extension.py  hive.py  sql.py  transform.py  udf.py
src/dek/spark/io/: readable.py
src/dek/utils/: __init__.py  log.py  parser.py  timer.py
tests/: conftest.py  test_InMemoryCsvFile.py  test_beam.py  test_path.py  test_spark_extension.py  test_spark_transformation.py
tests/effect/: test_lazy_processor.py  test_processor.py
tests/monad/: test_either.py  test_try.py
tests/path/: test_path.py
tests/utils/: test_parser.py  test_timer.py
