[metadata]
name = dek
author = Vincent Zi
author_email = workwithvincentzi@gmail.com
description = Data Engineering Kit
version = attr: dek.__version__
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >= 3.6
packages = find:
package_dir =
    =src
install_requires =
    pydantic
    python-dotenv
    smart_open
    ruamel.yaml
    pandas
    tabulate

[options.packages.find]
where = src
include = dek*

[options.extras_require]
dev = 
    build
    pytest
    pyspark<3.0
    chispa
    freezegun

