[metadata]
name = dek
author = Vincent Zi
author_email = workwithvincentzi@gmail.com
description = Data Engineering Kit
version = attr: dek.__version__
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >= 3.6
packages = find:
package_dir =
    =src
install_requires =
    pydantic
    python-dotenv
    smart_open
    ruamel.yaml
    pandas
    tabulate

[options.packages.find]
where = src
include = dek*

[options.extras_require]
dev = 
    ## Test dependencies
    build
    pytest
    chispa
    freezegun
    ## Dependencies that should be provided by execution environment or installed by user
    pyspark==2.4.8
    pandas


